# finance-etl-starter

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
downloader/: .env.example  README.md  package.json  tsconfig.json
downloader/src/: boa.ts  citi.ts  common.ts  fidelity.ts  usbank.ts
etl/: download_boa.py  download_citi.py  download_common.py  download_fidelity.py  download_usbank.py  downloader_common.py  load_clickhouse.py  mappings.yaml  parse_bank_csv.py  parse_coinbase_csv.py  parse_ofx.py  run_etl.py
metabase/: sample_dashboard.json
schemas/: schemas.sql
storage/state/boa/: Local State  SingletonCookie  SingletonLock  SingletonSocket
storage/state/boa/Default/: Cookies
storage/state/boa/Default/Cache/Cache_Data/: 006070dab62fce5f_0  00bf1313150ff553_0  00fb3a87975658a1_0  015a4a67bd531604_0  019192af9e33cd96_0  04c84b0d229e1cc1_0  055212c4f3f39978_0  05cdb639dc867c8a_0  0911db96817a1666_0  0abc45ced7ba7e0b_0  0cc4c6d6ee52040e_0  (+257 more)
storage/state/boa/Default/DawnGraphiteCache/: data_1  index
storage/state/boa/Default/DawnWebGPUCache/: data_1  index
storage/state/boa/Default/Extension Rules/: LOG
storage/state/boa/Default/Extension Scripts/: LOG
storage/state/boa/Default/GPUCache/: data_0  data_1  data_2  index
storage/state/boa/Default/Session Storage/: 000050.ldb  000053.ldb  000056.ldb  000059.ldb  LOG  LOG.old  MANIFEST-000001
storage/state/boa/Default/Site Characteristics Database/: LOG
storage/state/boa/Default/shared_proto_db/: LOG  LOG.old
storage/state/boa/ShaderCache/: index
(+195 files in other folders)
